# rallyx_clone

./: .gitignore  GDD.md  LICENSE  README.md  estrutura.md  pyproject.toml
.github/workflows/: python.yml
docs/: ARCHITECTURE.md
scripts/: run_game.py
src/rallyx_clone/: __init__.py  __main__.py  app.py
src/rallyx_clone/assets/data/: level_01.json
src/rallyx_clone/assets/images/: atlas.json
src/rallyx_clone/assets/sounds/: manifest.json
src/rallyx_clone/core/: __init__.py  assets.py  audio.py  collision.py  config.py  constants.py  pathfinding.py  scene.py  state.py  timer.py
src/rallyx_clone/gameplay/: __init__.py  enemy.py  entities_base.py  flag.py  player.py  session.py  smoke.py  world.py
src/rallyx_clone/scenes/: __init__.py  game_scene.py  gameover_scene.py  options_scene.py  pause_scene.py  title_scene.py
src/rallyx_clone/ui/: __init__.py  hud.py  menu.py  widgets.py
src/rallyx_clone/utils/: __init__.py  logger.py  math2d.py
tests/: test_level_loading.py
